--- a/tienda_artaud/templates/reproductor.html
+++ b/tienda_artaud/templates/reproductor.html
@@ -192,14 +192,15 @@
     <audio id="audioPlayer"></audio>
 
     <script>
-        // CONFIGURACIÓN DE LA PLAYLIST (Edita esto con tus archivos reales)
+        // CONFIGURACIÓN DE LA PLAYLIST (NO LEE METADATA)
         const songs = [
             { title: "Neverender", artist: "Justice", src: "{% static 'tienda_artaud/audio/tema_01.mp3' %}" },
             { title: "Post-Crucifixión", artist: "Pescado Rabioso", src: "{% static 'tienda_artaud/audio/tema_02.mp3' %}" },
             { title: "I Sat By The Ocean", artist: "Queens of the Stone Age", src: "{% static 'tienda_artaud/audio/tema_03.mp3' %}" },
-            { title: "IRIS OUT", artist: "Kenshi Yonezu", src: "{% static 'tienda_artaud/audio/tema_04.mp3' %}" },
-            { title: "iPod Touch", artist: "Ninajirachi", src: "{% static 'tienda_artaud/audio/tema_05.mp3' %}" },
-            { title: "As Alive As You Need Me To Be", artist: "Nine Inch Nails", src: "{% static 'tienda_artaud/audio/tema_06.mp3' %}" },
+            { title: "Rock DJ", artist: "Robbie Williams", src: "{% static 'tienda_artaud/audio/tema_04.mp3' %}" },
+            { title: "IRIS OUT", artist: "Kenshi Yonezu", src: "{% static 'tienda_artaud/audio/tema_05.mp3' %}" },
+            { title: "iPod Touch", artist: "Ninajirachi", src: "{% static 'tienda_artaud/audio/tema_06.mp3' %}" },
+            { title: "As Alive As You Need Me To Be", artist: "Nine Inch Nails", src: "{% static 'tienda_artaud/audio/tema_07.mp3' %}" },
         ];
 
         let currentIndex = 0;
