--- a/carrito/templates/carrito/carrito_detalle.html
+++ b/carrito/templates/carrito/carrito_detalle.html
@@ -56,6 +56,14 @@
         <h2>Total a Pagar: <span class="item-price-total" style="font-size: 1.5em; color: red;">
                 ${{ carrito.get_total|floatformat:2 }}
             </span></h2>
+        
+        <div style="display: flex; justify-content: flex-end; gap: 10px; margin-top: 15px;">
+        
+        <a href="{% url 'opciones_presupuesto' %}" class="btn-details" ...>
+            📄 Generar Presupuesto
+        </a>
+            
+
         <a href="{% url 'checkout' %}" class="btn-add-to-cart" style="width: auto; text-decoration: none;">
             Proceder al Pago
         </a>
