--- a/productos/templates/productos/detalle_producto.html
+++ b/productos/templates/productos/detalle_producto.html
@@ -17,7 +17,7 @@
             {% if producto.imagen_portada %}
                 <img id="detalle-main-image" src="{{ producto.imagen_portada.url }}" alt="{{ producto.album }}" class="detalle-imagen">
             {% else %}
-                <img src="{% static 'tienda_artaud/sin_imagen.png' %}" alt="Sin imagen" class="detalle-imagen sin-imagen-detalle">
+                <img src="{% static 'tienda_artaud/icons/sin_imagen.png' %}" alt="Sin imagen" class="detalle-imagen sin-imagen-detalle">
             {% endif %}
         </div>
 
@@ -26,7 +26,7 @@
         </div>
 
         <div class="external-links-container">
-            <p style="margin-bottom: 10px; font-size: 0.9em; color: #777; text-align: center;">Más información en:</p>
+            <p style="margin-bottom: 10px; font-size: 0.9em; text-align: center;">Ver más información en:</p>
             
             <div style="display: flex; gap: 10px;">
                 <a href="https://es.wikipedia.org/w/index.php?search={{ producto.artista|urlencode }}+{{ producto.album|urlencode }}" 
@@ -58,7 +58,8 @@
 
         {% if producto.stock > 0 %}
             {% if producto.vendedor != request.user %}
-                <div style="display: flex; align-items: stretch; gap: 15px; margin-bottom: 20px;">                    
+                <div style="display: flex; align-items: stretch; gap: 15px; margin-bottom: 20px;">
+                    
                     <form method="POST" action="{% url 'agregar_a_carrito' producto_id=producto.pk %}" style="margin: 0; flex: 1;">
                         {% csrf_token %}
                         <button type="submit" class="btn-add-to-cart" style="width: 100%; height: 100%;">
@@ -69,10 +70,10 @@
                     <form method="POST" action="{% url 'toggle_favorito' producto_id=producto.pk %}" style="margin: 0; flex: 1;">
                         {% csrf_token %}
                         <button type="submit" class="btn-favorito-detalle 
-                                {% if request.user in producto.favoritos.all %}favorited{% endif %}" 
+                                {% if es_favorito %}favorited{% endif %}" 
                                 aria-label="Alternar favoritos" style="width: 100%; height: 100%;">
                             
-                            {% if request.user in producto.favoritos.all %}
+                            {% if es_favorito %}
                                 <span style="margin-right: 5px;">❤️</span> Quitar de favoritos
                             {% else %}
                                 <span style="margin-right: 5px;">♡</span> Agregar a favoritos
