--- a/tienda_artaud/templates/account/login.html
+++ b/tienda_artaud/templates/account/login.html
@@ -10,6 +10,14 @@
         
         <form class="login" method="POST" action="{% url 'account_login' %}">
             {% csrf_token %}
+            
+            {% if form.errors %}
+                <div class="alert-error shake-animation">
+                    <p style="margin: 0;">
+                        El Usuario y/o la Contraseña son incorrectos.<br>Por favor, intentalo de nuevo.
+                    </p>
+                </div>
+            {% endif %}
 
             <div style="margin-bottom: 15px;">
                 <label for="id_username" style="display: block; margin-bottom: 5px; font-weight: bold;">
@@ -22,11 +30,11 @@
                 <label for="id_password" style="display: block; margin-bottom: 5px; font-weight: bold;">
                     Contraseña:
                 </label>
-                <input type="password" name="password" required id="id_password" placeholder="Ingresa tu contraseña">
+                <input type="password" name="password" required id="id_password" placeholder="Ingresá tu contraseña">
             </div>
             
             <button type="submit" style="width: 100%; padding: 12px; background-color: var(--color-navbar); color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 1.1em; font-weight: bold; margin-top: 10px;">
-                Iniciar Sesión de Prueba
+                Iniciar Sesión
             </button>
         </form>
 
