--- a/tienda_artaud/templates/base.html
+++ b/tienda_artaud/templates/base.html
@@ -159,6 +159,8 @@
             <a href="{% url 'about' %}">Sobre Nosotros</a>
             <a href="{% url 'blog_lista' %}">Blog</a>
             <a href="{% url 'radio_artaud' %}">Radio online</a>
+            <a href="{% url 'scraper_libros' %}">Scraper_TEST</a>
+            <a href="{% url 'scraper_jeds' %}">Scraper Jeds</a>
         </div>
         <div class="footer-col">
             <h4>Mi Cuenta</h4>
